test/libyul/yulSyntaxTests/dot_ellipse_variabledeclaration.yul
{
    let a...b := 1
}
// ----
// SyntaxError 7771: (10-15='a...b'): "a...b" is not a valid identifier (contains consecutive dots).
